Use JDK21 getLast() method